@@ -1,0 +1,314 @@
+<?xml version="1.0"?>
+
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<MODE>
+	<PROPS>
+		<PROPERTY NAME="commentStart" VALUE="/*" />
+		<PROPERTY NAME="commentEnd" VALUE="*/" />
+		<PROPERTY NAME="noWordSep" VALUE="_" />
+		<PROPERTY NAME="wordBreakChars" VALUE=",+-=&lt;&gt;/?^&amp;*" />
+	</PROPS>
+	<RULES ESCAPE="\" IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
+		<WHITESPACE> </WHITESPACE>
+		<WHITESPACE>	</WHITESPACE>
+
+		<!-- enhancement if using some preprocessor -->
+		<SPAN TYPE="COMMENT1">
+			<BEGIN>/*</BEGIN>
+			<END>*/</END>
+		</SPAN>
+		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
+			<BEGIN>"</BEGIN>
+			<END>"</END>
+		</SPAN>
+
+		<EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT2">REM </EOL_SPAN>
+
+		<SEQ TYPE="OPERATOR">=</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;=</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;=</SEQ>
+		<SEQ TYPE="OPERATOR">+</SEQ>
+		<SEQ TYPE="OPERATOR">-</SEQ>
+		<SEQ TYPE="OPERATOR">/</SEQ>
+		<SEQ TYPE="OPERATOR">*</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">^</SEQ>
+		<SEQ TYPE="OPERATOR"> AND </SEQ>
+		<SEQ TYPE="OPERATOR"> OR </SEQ>
+		<SEQ TYPE="NULL">%</SEQ>
+		<SEQ TYPE="NULL">$</SEQ>
+		<SEQ TYPE="NULL">!</SEQ>
+		<SEQ TYPE="NULL">)</SEQ>
+		<SEQ TYPE="NULL">.</SEQ>
+		<SEQ TYPE="NULL">,</SEQ>
+
+		<MARK_PREVIOUS TYPE="LABEL" EXCLUDE_MATCH="TRUE" AT_LINE_START="TRUE">:</MARK_PREVIOUS>
+		<MARK_PREVIOUS TYPE="FUNCTION" EXCLUDE_MATCH="TRUE">(</MARK_PREVIOUS>
+
+		<KEYWORDS IGNORE_CASE="FALSE">
+			<KEYWORD1>ABS</KEYWORD1>
+			<KEYWORD1>ADJN</KEYWORD1>
+			<KEYWORD1>ARGC</KEYWORD1>
+			<KEYWORD1>ARGV</KEYWORD1>
+			<KEYWORD1>ASC</KEYWORD1>
+			<KEYWORD1>ATH</KEYWORD1>
+			<KEYWORD1>ATN</KEYWORD1>
+			<KEYWORD1>BACKGROUND</KEYWORD1>
+			<KEYWORD1>BIN</KEYWORD1>
+			<KEYWORD1>BSZ</KEYWORD1>
+			<KEYWORD1>CALLBACK</KEYWORD1>
+			<KEYWORD1>CHANOPT</KEYWORD1>
+			<KEYWORD1>CHR</KEYWORD1>
+			<KEYWORD1>CLIPCLEAR</KEYWORD1>
+			<KEYWORD1>CLIPFROMFILE</KEYWORD1>
+			<KEYWORD1>CLIPFROMSTR</KEYWORD1>
+			<KEYWORD1>CLIPISFORMAT</KEYWORD1>
+			<KEYWORD1>CLIPLOCK</KEYWORD1>
+			<KEYWORD1>CLIPREGFORMAT</KEYWORD1>
+			<KEYWORD1>CLIPTOFILE</KEYWORD1>
+			<KEYWORD1>CLIPTOSTR</KEYWORD1>
+			<KEYWORD1>CLIPUNLOCK</KEYWORD1>
+			<KEYWORD1>COS</KEYWORD1>
+			<KEYWORD1>CPL</KEYWORD1>
+			<KEYWORD1>CRC</KEYWORD1>
+			<KEYWORD1>CRC16</KEYWORD1>
+			<KEYWORD1>CTRL</KEYWORD1>
+			<KEYWORD1>CVS</KEYWORD1>
+			<KEYWORD1>CVT</KEYWORD1>
+			<KEYWORD1>DATE</KEYWORD1>
+			<KEYWORD1>DEC</KEYWORD1>
+			<KEYWORD1>DIMS</KEYWORD1>
+			<KEYWORD1>DSK</KEYWORD1>
+			<KEYWORD1>DSZ</KEYWORD1>
+			<KEYWORD1>EPT</KEYWORD1>
+			<KEYWORD1>ERRMES</KEYWORD1>
+			<KEYWORD1>FATTR</KEYWORD1>
+			<KEYWORD1>FBIN</KEYWORD1>
+			<KEYWORD1>FDEC</KEYWORD1>
+			<KEYWORD1>FID</KEYWORD1>
+			<KEYWORD1>FIELD</KEYWORD1>
+			<KEYWORD1>FILE</KEYWORD1>
+			<KEYWORD1>FILEOPT</KEYWORD1>
+			<KEYWORD1>FILL</KEYWORD1>
+			<KEYWORD1>FIN</KEYWORD1>
+			<KEYWORD1>FLOATINGPOINT</KEYWORD1>
+			<KEYWORD1>FPT</KEYWORD1>
+			<KEYWORD1>GAP</KEYWORD1>
+			<KEYWORD1>HSA</KEYWORD1>
+			<KEYWORD1>HSH</KEYWORD1>
+			<KEYWORD1>HTA</KEYWORD1>
+			<KEYWORD1>IMP</KEYWORD1>
+			<KEYWORD1>INFO</KEYWORD1>
+			<KEYWORD1>INT</KEYWORD1>
+			<KEYWORD1>JUL</KEYWORD1>
+			<KEYWORD1>LCHECKIN</KEYWORD1>
+			<KEYWORD1>LCHECKOUT</KEYWORD1>
+			<KEYWORD1>LEN</KEYWORD1>
+			<KEYWORD1>LINFO</KEYWORD1>
+			<KEYWORD1>LOG</KEYWORD1>
+			<KEYWORD1>LRC</KEYWORD1>
+			<KEYWORD1>LST</KEYWORD1>
+			<KEYWORD1>MASK</KEYWORD1>
+			<KEYWORD1>MAX</KEYWORD1>
+			<KEYWORD1>MENUINFO</KEYWORD1>
+			<KEYWORD1>MIN</KEYWORD1>
+			<KEYWORD1>MOD</KEYWORD1>
+			<KEYWORD1>MSGBOX</KEYWORD1>
+			<KEYWORD1>NEVAL</KEYWORD1>
+			<KEYWORD1>NFIELD</KEYWORD1>
+			<KEYWORD1>NOTICE</KEYWORD1>
+			<KEYWORD1>NOTICETPL</KEYWORD1>
+			<KEYWORD1>NUM</KEYWORD1>
+			<KEYWORD1>PAD</KEYWORD1>
+			<KEYWORD1>PCK</KEYWORD1>
+			<KEYWORD1>PGM</KEYWORD1>
+			<KEYWORD1>POS</KEYWORD1>
+			<KEYWORD1>PROCESS_EVENTS</KEYWORD1>
+			<KEYWORD1>PROGRAM</KEYWORD1>
+			<KEYWORD1>PSZ</KEYWORD1>
+			<KEYWORD1>PUB</KEYWORD1>
+			<KEYWORD1>REMOVE_CALLBACK</KEYWORD1>
+			<KEYWORD1>RESERVE</KEYWORD1>
+			<KEYWORD1>RND</KEYWORD1>
+			<KEYWORD1>ROUND</KEYWORD1>
+			<KEYWORD1>SCALL</KEYWORD1>
+			<KEYWORD1>SENDMSG</KEYWORD1>
+			<KEYWORD1>SEVAL</KEYWORD1>
+			<KEYWORD1>SGN</KEYWORD1>
+			<KEYWORD1>SIN</KEYWORD1>
+			<KEYWORD1>SQR</KEYWORD1>
+			<KEYWORD1>SSORT</KEYWORD1>
+			<KEYWORD1>SSZ</KEYWORD1>
+			<KEYWORD1>STBL</KEYWORD1>
+			<KEYWORD1>STR</KEYWORD1>
+			<KEYWORD1>SWAP</KEYWORD1>
+			<KEYWORD1>SYS</KEYWORD1>
+			<KEYWORD1>TCB</KEYWORD1>
+			<KEYWORD1>TMPL</KEYWORD1>
+			<KEYWORD1>TSK</KEYWORD1>
+			<KEYWORD1>UPK</KEYWORD1>
+			<KEYWORD1>WINFIRST</KEYWORD1>
+			<KEYWORD1>WININFO</KEYWORD1>
+			<KEYWORD1>WINNEXT</KEYWORD1>
+
+			<KEYWORD2>CHDIR</KEYWORD2>
+			<KEYWORD2>CISAM</KEYWORD2>
+			<KEYWORD2>CLOSE</KEYWORD2>
+			<KEYWORD2>CONTINUE</KEYWORD2>
+			<KEYWORD2>DIRECT</KEYWORD2>
+			<KEYWORD2>DIR</KEYWORD2>
+			<KEYWORD2>DISABLE</KEYWORD2>
+			<KEYWORD2>DOM</KEYWORD2>
+			<KEYWORD2>DUMP</KEYWORD2>
+			<KEYWORD2>ENABLE</KEYWORD2>
+			<KEYWORD2>END</KEYWORD2>
+			<KEYWORD2>ENDTRACE</KEYWORD2>
+			<KEYWORD2>ERASE</KEYWORD2>
+			<KEYWORD2>EXTRACT</KEYWORD2>
+			<KEYWORD2>FIND</KEYWORD2>
+			<KEYWORD2>FROM</KEYWORD2>
+			<KEYWORD2>IND</KEYWORD2>
+			<KEYWORD2>INDEXED</KEYWORD2>
+			<KEYWORD2>INPUT</KEYWORD2>
+			<KEYWORD2>INPUTE</KEYWORD2>
+			<KEYWORD2>INPUTN</KEYWORD2>
+			<KEYWORD2>IOL</KEYWORD2>
+			<KEYWORD2>IOLIST</KEYWORD2>
+			<KEYWORD2>KEY</KEYWORD2>
+			<KEYWORD2>KEYF</KEYWORD2>
+			<KEYWORD2>KEYL</KEYWORD2>
+			<KEYWORD2>KEYN</KEYWORD2>
+			<KEYWORD2>KEYP</KEYWORD2>
+			<KEYWORD2>KGEN</KEYWORD2>
+			<KEYWORD2>KNUM</KEYWORD2>
+			<KEYWORD2>LIST</KEYWORD2>
+			<KEYWORD2>LOAD</KEYWORD2>
+			<KEYWORD2>LOCK</KEYWORD2>
+			<KEYWORD2>MERGE</KEYWORD2>
+			<KEYWORD2>MKDIR</KEYWORD2>
+			<KEYWORD2>MKEYED</KEYWORD2>
+			<KEYWORD2>OPEN</KEYWORD2>
+			<KEYWORD2>PREFIX</KEYWORD2>
+			<KEYWORD2>PRINT</KEYWORD2>
+			<KEYWORD2>READ_RESOURCE</KEYWORD2>
+			<KEYWORD2>READ</KEYWORD2>
+			<KEYWORD2>RECORD</KEYWORD2>
+			<KEYWORD2>REMOVE</KEYWORD2>
+			<KEYWORD2>RENAME</KEYWORD2>
+			<KEYWORD2>RESCLOSE</KEYWORD2>
+			<KEYWORD2>RESFIRST</KEYWORD2>
+			<KEYWORD2>RESGET</KEYWORD2>
+			<KEYWORD2>RESINFO</KEYWORD2>
+			<KEYWORD2>RESNEXT</KEYWORD2>
+			<KEYWORD2>RESOPEN</KEYWORD2>
+			<KEYWORD2>REV</KEYWORD2>
+			<KEYWORD2>RMDIR</KEYWORD2>
+			<KEYWORD2>SAVE</KEYWORD2>
+			<KEYWORD2>SELECT</KEYWORD2>
+			<KEYWORD2>SERIAL</KEYWORD2>
+			<KEYWORD2>SETDAY</KEYWORD2>
+			<KEYWORD2>SETDRIVE</KEYWORD2>
+			<KEYWORD2>SETTRACE</KEYWORD2>
+			<KEYWORD2>SIZ</KEYWORD2>
+			<KEYWORD2>SORT</KEYWORD2>
+			<KEYWORD2>SQLCHN</KEYWORD2>
+			<KEYWORD2>SQLCLOSE</KEYWORD2>
+			<KEYWORD2>SQLERR</KEYWORD2>
+			<KEYWORD2>SQLEXEC</KEYWORD2>
+			<KEYWORD2>SQLFETCH</KEYWORD2>
+			<KEYWORD2>SQLLIST</KEYWORD2>
+			<KEYWORD2>SQLOPEN</KEYWORD2>
+			<KEYWORD2>SQLPREP</KEYWORD2>
+			<KEYWORD2>SQLSET</KEYWORD2>
+			<KEYWORD2>SQLTABLES</KEYWORD2>
+			<KEYWORD2>SQLTMPL</KEYWORD2>
+			<KEYWORD2>SQLUNT</KEYWORD2>
+			<KEYWORD2>STRING</KEYWORD2>
+			<KEYWORD2>TABLE</KEYWORD2>
+			<KEYWORD2>TBL</KEYWORD2>
+			<KEYWORD2>TIM</KEYWORD2>
+			<KEYWORD2>UNLOCK</KEYWORD2>
+			<KEYWORD2>WHERE</KEYWORD2>
+			<KEYWORD2>WRITE</KEYWORD2>
+
+			<KEYWORD3>ADDR</KEYWORD3>
+			<KEYWORD3>ALL</KEYWORD3>
+			<KEYWORD3>AND</KEYWORD3>
+			<KEYWORD3>AUTO</KEYWORD3>
+			<KEYWORD3>BEGIN</KEYWORD3>
+			<KEYWORD3>BREAK</KEYWORD3>
+			<KEYWORD3>CALL</KEYWORD3>
+			<KEYWORD3>CASE</KEYWORD3>
+			<KEYWORD3>CHN</KEYWORD3>
+			<KEYWORD3>CLEAR</KEYWORD3>
+			<KEYWORD3>CTL</KEYWORD3>
+			<KEYWORD3>DATA</KEYWORD3>
+			<KEYWORD3>DAY</KEYWORD3>
+			<KEYWORD3>DEF</KEYWORD3>
+			<KEYWORD3>DEFAULT</KEYWORD3>
+			<KEYWORD3>DEFEND</KEYWORD3>
+			<KEYWORD3>DELETE</KEYWORD3>
+			<KEYWORD3>DIM</KEYWORD3>
+			<KEYWORD3>DREAD</KEYWORD3>
+			<KEYWORD3>DROP</KEYWORD3>
+			<KEYWORD3>EDIT</KEYWORD3>
+			<KEYWORD3>ELSE</KEYWORD3>
+			<KEYWORD3>ENDIF</KEYWORD3>
+			<KEYWORD3>ENTER</KEYWORD3>
+			<KEYWORD3>ERR</KEYWORD3>
+			<KEYWORD3>ESCAPE</KEYWORD3>
+			<KEYWORD3>ESCOFF</KEYWORD3>
+			<KEYWORD3>ESCON</KEYWORD3>
+			<KEYWORD3>EXECUTE</KEYWORD3>
+			<KEYWORD3>EXIT</KEYWORD3>
+			<KEYWORD3>EXITTO</KEYWORD3>
+			<KEYWORD3>FI</KEYWORD3>
+			<KEYWORD3>FOR</KEYWORD3>
+			<KEYWORD3>GOSUB</KEYWORD3>
+			<KEYWORD3>GOTO</KEYWORD3>
+			<KEYWORD3>IF</KEYWORD3>
+			<KEYWORD3>INITFILE</KEYWORD3>
+			<KEYWORD3>IOR</KEYWORD3>
+			<KEYWORD3>LET</KEYWORD3>
+			<KEYWORD3>NEXT</KEYWORD3>
+			<KEYWORD3>NOT</KEYWORD3>
+			<KEYWORD3>ON</KEYWORD3>
+			<KEYWORD3>OPTS</KEYWORD3>
+			<KEYWORD3>OR</KEYWORD3>
+			<KEYWORD3>PFX</KEYWORD3>
+			<KEYWORD3>PRECISION</KEYWORD3>
+			<KEYWORD3>RELEASE</KEYWORD3>
+			<KEYWORD3>RENUM</KEYWORD3>
+			<KEYWORD3>REPEAT</KEYWORD3>
+			<KEYWORD3>RESET</KEYWORD3>
+			<KEYWORD3>RESTORE</KEYWORD3>
+			<KEYWORD3>RETRY</KEYWORD3>
+			<KEYWORD3>RETURN</KEYWORD3>
+			<KEYWORD3>RUN</KEYWORD3>
+			<KEYWORD3>SET_CASE_SENSITIVE_OFF</KEYWORD3>
+			<KEYWORD3>SET_CASE_SENSITIVE_ON</KEYWORD3>
+			<KEYWORD3>SETERR</KEYWORD3>
+			<KEYWORD3>SETESC</KEYWORD3>
+			<KEYWORD3>SETOPTS</KEYWORD3>
+			<KEYWORD3>SETTIME</KEYWORD3>
+			<KEYWORD3>SSN</KEYWORD3>
+			<KEYWORD3>START</KEYWORD3>
+			<KEYWORD3>STEP</KEYWORD3>
+			<KEYWORD3>STOP</KEYWORD3>
+			<KEYWORD3>SWEND</KEYWORD3>
+			<KEYWORD3>SWITCH</KEYWORD3>
+			<KEYWORD3>THEN</KEYWORD3>
+			<KEYWORD3>TO</KEYWORD3>
+			<KEYWORD3>UNT</KEYWORD3>
+			<KEYWORD3>UNTIL</KEYWORD3>
+			<KEYWORD3>WAIT</KEYWORD3>
+			<KEYWORD3>WEND</KEYWORD3>
+			<KEYWORD3>WHILE</KEYWORD3>
+			<KEYWORD3>XOR</KEYWORD3>
+		</KEYWORDS>
+	</RULES>
+</MODE>
